# as-help-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  RAG.md  README.md  compare.md
.github/: copilot-instructions.md
.github/prompts/: plan-rustRewrite.prompt.md
.github/workflows/: ci.yml  release.yml
rs/src/: indexer.rs  main.rs  models.rs
src/: config.rs  embeddings.rs  indexer.rs  main.rs  models.rs  search_engine.rs  server.rs
